<resources>
    <string name="app_name" translatable="false">Pocket Personal Trainer</string>
    <string name="btn_entrar">Entrar</string>
    <string name="TxtView_cad">Cadastrar</string>
    <string name="txt_email" translatable="false">E-mail</string>
    <string name="txt_passwd">Senha</string>
    <string name="tbl_treino">Treino</string>
    <string name="menu_treino">Adicionar Treinos</string>
    <string name="tbl_evolution">Evolução</string>
    <string name="tbl_exemplos">Exemplos</string>
    <string name="tbl_perfil">Perfil</string>
    <string name="TxtView_redfPwd">Redefinir Senha</string>
    <string name="txt_peso">Peso</string>
    <string name="txt_altura">Altura</string>
    <string name="txt_autNomeGyn">Nome da Academia</string>
    <string name="lbl_photoPerfil">Foto de perfil</string>
    <string name="txt_fullName">Nome Completo</string>
    <string name="txt_confPasswd">Confirmar Senha</string>
    <string name="lbl_passwdNotValid">Senha invalida</string>
    <string name="lbl_passwdValid">Senha valida</string>
    <string name="storage_permission_rationale_title">Este app precisa da permissão para armazenar no cartão SD</string>
    <string name="storage_permition_rationale_message">Para tirar a foto, você precisa garantir esta permissão!</string>
    <string name="storage_permission_denied_message">Permissão de armazenamento é preciso para tirar fotos com a camera</string>

    <string name="facebook_app_id" translatable="false">2230507343902033</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2230507343902033</string>

    <string name="picture">Tirar Fotos</string>
    <string name="description_info">Info</string>
    <string name="request_permission">Este app precisa da permissão de camera.</string>
    <string name="drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="camera_button">Botão de capitura</string>
    <string name="thumbnail_button">Mostrar imagens</string>
    <string name="camera_switch">rotateCamera</string>
    <string name="preview" translatable="false">Camera Preview</string>
    <string name="video" translatable="false">Video</string>
    <string name="foto">Foto</string>
    <string name="edtTelefone">Telefone</string>


</resources>
