<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".CadastrarActivity"
    tools:layout_editor_absoluteY="25dp">

    <EditText
            android:id="@+id/edtEmailCadastro"
            android:layout_width="333dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.306"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTelefone"/>

    <EditText
            android:id="@+id/edtPeso"
            android:layout_width="103dp"
            android:layout_height="38dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/txt_peso"
            android:inputType="numberDecimal"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtConfSenha"/>

    <EditText
            android:id="@+id/edtAltura"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/txt_altura"
            android:inputType="numberDecimal"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toEndOf="@+id/edtPeso"
            app:layout_constraintTop_toBottomOf="@+id/edtConfSenha"
    />

    <EditText
            android:id="@+id/edtSenhaC"
            android:layout_width="206dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/txt_passwd"
            android:inputType="textPassword"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmailCadastro"/>

    <EditText
            android:id="@+id/edtConfSenha"
            android:layout_width="206dp"
            android:layout_height="38dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/txt_confPasswd"
            android:inputType="textPassword"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtSenhaC"/>

    <EditText
            android:id="@+id/edtNome"
            android:layout_width="356dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/txt_fullName"
            android:inputType="textPersonName"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="92dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="319dp"
            android:layout_height="48dp"
            android:layout_marginBottom="64dp"
            android:background="@color/colorPrimary"
            android:text="@string/TxtView_cad"
            android:textColor="@color/colorSecundary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edtPeso"
            app:layout_constraintVertical_bias="0.54"/>

    <EditText
            android:id="@+id/edtTelefone"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/edtTelefone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNome"/>
    <TextView
            android:text="Novo usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:fontFamily="sans-serif-black"
            android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>